--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
+    "react-switch": "^3.0.4",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
