--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
+    "react-image-gallery": "^0.8.12",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-switch": "^3.0.4",
