--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "npm": "^6.9.0",
+    "npm": "^6.13.6",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -58,6 +58,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-switch": "^3.0.4",
+    "react-youtube": "^7.9.0",
     "redux": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -65,7 +66,7 @@
     "styled-components": "^4.2.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "^3.3.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
