--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
+    "@tinymce/tinymce-react": "^3.5.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -38,7 +39,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
-    "npm": "^6.13.6",
+    "npm": "^6.14.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -53,6 +54,7 @@
     "react-image-gallery": "^0.8.16",
     "react-image-magnify": "^2.7.4",
     "react-images-loaded": "^2.0.0",
+    "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^2.3.0",
     "react-notifications": "^1.4.3",
     "react-redux": "^6.0.1",
